# DataFetcher

./: README.md  pyproject.toml  requirements.txt  requrements.txt
src/movingpicturesfetcher/: elements.py  settings.py  tomato_accessor.py  urls.py  utils.py
src/tomato_scrapper/: tomato_accessor.py  urls.py
test/: tomato_accessor_test.py  utils_test.py
